# assignment1

./: .gitignore  .main.py.swp  .pylintrc  README.md  account.py  action.py  conftest.py  exchange_cache.json  main.py  pyproject.toml  requirements.txt  test_api.py  test_bank.py  test_bankaccount.py  test_states.py
.github/workflows/: python-app.yml
app/: __init__.py  actions.py  context.py  core.py  network.py  render_spec.py  setup.py
app/api/: __init__.py  api.py  models.py
app/domain/: __init__.py  account.py  setup.py
app/states/: __init__.py  input_state.py  login_state.py  menu_state.py  quit_state.py  state.py
app/tui/: __init__.py  tui.py
domain/: __init__.py  account.py
state/: __init__.py  menu_state.py  state.py
tui/: tui.py
